wispers-connect/include/wispers_connect.h


typedef enum {
    WISPERS_STATUS_SUCCESS = 0,
    WISPERS_STATUS_NULL_POINTER = 1,
    WISPERS_STATUS_INVALID_UTF8 = 2,
    WISPERS_STATUS_STORE_ERROR = 3,
    WISPERS_STATUS_ALREADY_REGISTERED = 4,
    WISPERS_STATUS_NOT_REGISTERED = 5,
    WISPERS_STATUS_NOT_FOUND = 6,
    WISPERS_STATUS_BUFFER_TOO_SMALL = 7,
    WISPERS_STATUS_MISSING_CALLBACK = 8,
    WISPERS_STATUS_INVALID_ACTIVATION_CODE = 9,
    WISPERS_STATUS_ACTIVATION_FAILED = 10,
    WISPERS_STATUS_HUB_ERROR = 11,
    WISPERS_STATUS_CONNECTION_FAILED = 12,
    WISPERS_STATUS_TIMEOUT = 13,
    WISPERS_STATUS_INVALID_STATE = 14,
    WISPERS_STATUS_UNAUTHENTICATED = 15,
    WISPERS_STATUS_PEER_REJECTED = 16,
    WISPERS_STATUS_PEER_UNAVAILABLE = 17,
    WISPERS_STATUS_REVOKED = 18,
} WispersStatus;
typedef enum {
    WISPERS_NODE_STATE_PENDING = 0,
    WISPERS_NODE_STATE_REGISTERED = 1,
    WISPERS_NODE_STATE_ACTIVATED = 2,
    WISPERS_NODE_STATE_REVOKED = 3,
} WispersNodeState;
typedef enum {
    WISPERS_TTL_PROFILE_INTERACTIVE = 0,  
    WISPERS_TTL_PROFILE_ASYNCHRONOUS = 1, 
} WispersTtlProfile;
typedef struct WispersNodeStorageHandle WispersNodeStorageHandle;
typedef struct WispersNodeHandle WispersNodeHandle;
typedef struct WispersServingHandle WispersServingHandle;
typedef struct WispersServingSession WispersServingSession;
typedef struct WispersIncomingConnections WispersIncomingConnections;
typedef struct WispersUdpConnectionHandle WispersUdpConnectionHandle;
typedef struct WispersQuicConnectionHandle WispersQuicConnectionHandle;
typedef struct WispersQuicStreamHandle WispersQuicStreamHandle;
typedef struct WispersGroupInfo WispersGroupInfo;
typedef struct WispersNode WispersNode;
typedef struct WispersServingStatus WispersServingStatus;
typedef struct {
    void *ctx;
    WispersStatus (*load_root_key)(void *ctx, uint8_t *out_key, size_t out_key_len);
    WispersStatus (*save_root_key)(void *ctx, const uint8_t *key, size_t key_len);
    WispersStatus (*delete_root_key)(void *ctx);
    WispersStatus (*load_registration)(void *ctx, uint8_t *buffer, size_t buffer_len, size_t *out_len);
    WispersStatus (*save_registration)(void *ctx, const uint8_t *buffer, size_t buffer_len);
    WispersStatus (*delete_registration)(void *ctx);
} WispersNodeStorageCallbacks;
typedef void (*WispersCallback)(void *ctx, WispersStatus status, const char *error_detail);
typedef void (*WispersInitCallback)(
    void *ctx,
    WispersStatus status,
    const char *error_detail,
    WispersNodeHandle *handle,
    WispersNodeState state
);
typedef enum {
    WISPERS_GROUP_STATE_ALONE = 0,           
    WISPERS_GROUP_STATE_BOOTSTRAP = 1,       
    WISPERS_GROUP_STATE_NEED_ACTIVATION = 2, 
    WISPERS_GROUP_STATE_CAN_ENDORSE = 3,     
    WISPERS_GROUP_STATE_ALL_ACTIVATED = 4,   
} WispersGroupState;
void wispers_group_info_free(WispersGroupInfo *group_info);
typedef void (*WispersGroupInfoCallback)(
    void *ctx,
    WispersStatus status,
    const char *error_detail,
    WispersGroupInfo *group_info
);
const char        *wispers_group_info_id(const WispersGroupInfo *info);
const char        *wispers_group_info_name(const WispersGroupInfo *info);   
int64_t            wispers_group_info_created_at_millis(const WispersGroupInfo *info);
WispersGroupState  wispers_group_info_state(const WispersGroupInfo *info);
size_t             wispers_group_info_nodes_count(const WispersGroupInfo *info);
const WispersNode *wispers_group_info_node_at(const WispersGroupInfo *info, size_t index);
int32_t      wispers_node_number(const WispersNode *node);
const char  *wispers_node_name(const WispersNode *node);
const char  *wispers_node_metadata(const WispersNode *node);
bool         wispers_node_is_self(const WispersNode *node);
WispersNodeState wispers_group_node_state(const WispersNode *node);    
int64_t      wispers_node_last_seen_at_millis(const WispersNode *node);
bool         wispers_node_is_online(const WispersNode *node);
typedef void (*WispersStartServingCallback)(
    void *ctx,
    WispersStatus status,
    const char *error_detail,
    WispersServingHandle *serving_handle,
    WispersServingSession *session,
    WispersIncomingConnections *incoming
);
typedef void (*WispersActivationCodeCallback)(
    void *ctx,
    WispersStatus status,
    const char *error_detail,
    char *activation_code
);
typedef void (*WispersUdpConnectionCallback)(
    void *ctx,
    WispersStatus status,
    const char *error_detail,
    WispersUdpConnectionHandle *connection
);
typedef void (*WispersDataCallback)(
    void *ctx,
    WispersStatus status,
    const char *error_detail,
    const uint8_t *data,
    size_t len
);
typedef void (*WispersQuicConnectionCallback)(
    void *ctx,
    WispersStatus status,
    const char *error_detail,
    WispersQuicConnectionHandle *connection
);
typedef void (*WispersQuicStreamCallback)(
    void *ctx,
    WispersStatus status,
    const char *error_detail,
    WispersQuicStreamHandle *stream
);
typedef struct {
    char *connectivity_group_id;  
    int32_t node_number;
    char *auth_token;             
    char *attestation_jwt;        
} WispersRegistrationInfo;
void wispers_registration_info_free(WispersRegistrationInfo *info);
WispersNodeStorageHandle *wispers_storage_new_in_memory(void);
WispersNodeStorageHandle *wispers_storage_new_with_callbacks(const WispersNodeStorageCallbacks *callbacks);
void wispers_storage_free(WispersNodeStorageHandle *handle);
WispersStatus wispers_storage_read_registration(
    WispersNodeStorageHandle *handle,
    WispersRegistrationInfo *out_info
);
WispersStatus wispers_storage_override_hub_addr(
    WispersNodeStorageHandle *handle,
    const char *hub_addr
);
WispersStatus wispers_storage_delete_state(WispersNodeStorageHandle *handle);
WispersStatus wispers_storage_restore_or_init_async(
    WispersNodeStorageHandle *handle,
    void *ctx,
    WispersInitCallback callback
);
void wispers_node_free(WispersNodeHandle *handle);
WispersNodeState wispers_node_state(WispersNodeHandle *handle);
WispersStatus wispers_node_register_async(
    WispersNodeHandle *handle,
    const char *token,
    void *ctx,
    WispersCallback callback
);
WispersStatus wispers_node_activate_async(
    WispersNodeHandle *handle,
    const char *activation_code,
    void *ctx,
    WispersCallback callback
);
WispersStatus wispers_node_logout_async(
    WispersNodeHandle *handle,
    void *ctx,
    WispersCallback callback
);
WispersStatus wispers_node_revoke_node_async(
    WispersNodeHandle *handle,
    int32_t target_node_number,
    void *ctx,
    WispersCallback callback
);
WispersStatus wispers_node_refresh_membership_async(
    WispersNodeHandle *handle,
    void *ctx,
    WispersCallback callback
);
WispersStatus wispers_node_group_info_async(
    WispersNodeHandle *handle,
    void *ctx,
    WispersGroupInfoCallback callback
);
WispersStatus wispers_node_start_serving_async(
    WispersNodeHandle *handle,
    void *ctx,
    WispersStartServingCallback callback
);
WispersStatus wispers_node_connect_udp_async(
    WispersNodeHandle *handle,
    int32_t peer_node_number,
    void *ctx,
    WispersUdpConnectionCallback callback
);
WispersStatus wispers_node_connect_quic_async(
    WispersNodeHandle *handle,
    int32_t peer_node_number,
    void *ctx,
    WispersQuicConnectionCallback callback
);
WispersStatus wispers_udp_connection_send(
    WispersUdpConnectionHandle *handle,
    const uint8_t *data,
    size_t len
);
WispersStatus wispers_udp_connection_recv_async(
    WispersUdpConnectionHandle *handle,
    void *ctx,
    WispersDataCallback callback
);
void wispers_udp_connection_close(WispersUdpConnectionHandle *handle);
void wispers_udp_connection_free(WispersUdpConnectionHandle *handle);
WispersStatus wispers_quic_connection_open_stream_async(
    WispersQuicConnectionHandle *handle,
    void *ctx,
    WispersQuicStreamCallback callback
);
WispersStatus wispers_quic_connection_accept_stream_async(
    WispersQuicConnectionHandle *handle,
    void *ctx,
    WispersQuicStreamCallback callback
);
WispersStatus wispers_quic_connection_close_async(
    WispersQuicConnectionHandle *handle,
    void *ctx,
    WispersCallback callback
);
void wispers_quic_connection_free(WispersQuicConnectionHandle *handle);
void wispers_quic_stream_free(WispersQuicStreamHandle *stream);
WispersStatus wispers_quic_stream_write_async(
    WispersQuicStreamHandle *handle,
    const uint8_t *data,
    size_t len,
    void *ctx,
    WispersCallback callback
);
WispersStatus wispers_quic_stream_read_async(
    WispersQuicStreamHandle *handle,
    size_t max_len,
    void *ctx,
    WispersDataCallback callback
);
WispersStatus wispers_quic_stream_finish_async(
    WispersQuicStreamHandle *handle,
    void *ctx,
    WispersCallback callback
);
WispersStatus wispers_quic_stream_shutdown_async(
    WispersQuicStreamHandle *handle,
    void *ctx,
    WispersCallback callback
);
WispersStatus wispers_serving_handle_generate_activation_code_async(
    WispersServingHandle *handle,
    void *ctx,
    WispersActivationCodeCallback callback
);
WispersStatus wispers_serving_handle_generate_activation_code_with_ttl_async(
    WispersServingHandle *handle,
    WispersTtlProfile ttl_profile,
    void *ctx,
    WispersActivationCodeCallback callback
);
WispersStatus wispers_serving_session_run_async(
    WispersServingSession *session,
    void *ctx,
    WispersCallback callback
);
WispersStatus wispers_serving_handle_shutdown_async(
    WispersServingHandle *handle,
    void *ctx,
    WispersCallback callback
);
typedef void (*WispersServingStatusCallback)(
    void *ctx,
    WispersStatus status,
    const char *error_detail,
    WispersServingStatus *serving_status
);
WispersStatus wispers_serving_handle_status_async(
    WispersServingHandle *handle,
    void *ctx,
    WispersServingStatusCallback callback
);
void wispers_serving_status_free(WispersServingStatus *status);
bool        wispers_serving_status_connected(const WispersServingStatus *status);
int32_t     wispers_serving_status_node_number(const WispersServingStatus *status);
const char *wispers_serving_status_connectivity_group_id(const WispersServingStatus *status);
size_t      wispers_serving_status_codes_outstanding(const WispersServingStatus *status);
size_t      wispers_serving_status_nodes_awaiting_cosign_count(const WispersServingStatus *status);
int32_t     wispers_serving_status_node_awaiting_cosign_at(const WispersServingStatus *status, size_t index);
void wispers_serving_handle_free(WispersServingHandle *handle);
void wispers_serving_session_free(WispersServingSession *session);
void wispers_incoming_connections_free(WispersIncomingConnections *incoming);
void wispers_string_free(char *ptr);